openmetadata-docs/content/v0.13.4/main-concepts/metadata-standard/schemas/entity/services/connections/database/mssqlConnection.md
---
title: mssqlConnection
slug: /main-concepts/metadata-standard/schemas/entity/services/connections/database/mssqlconnection
---

# MssqlConnection

*Mssql Database Connection Config*

## Properties

- **`type`**: Service Type. Refer to *#/definitions/mssqlType*. Default: `Mssql`.
- **`scheme`**: SQLAlchemy driver scheme options. Refer to *#/definitions/mssqlScheme*. Default: `mssql+pytds`.
- **`username`** *(string)*: Username to connect to MSSQL. This user should have privileges to read all the metadata in MSSQL.
- **`password`** *(string)*: Password to connect to MSSQL.
- **`hostPort`** *(string)*: Host and port of the MSSQL service.
- **`database`** *(string)*: Database of the data source. This is optional parameter, if you would like to restrict the metadata reading to a single database. When left blank, OpenMetadata Ingestion attempts to scan all the databases.
- **`uriString`** *(string)*: Connection URI In case of pyodbc.
- **`connectionOptions`**: Refer to *../connectionBasicType.json#/definitions/connectionOptions*.
- **`connectionArguments`**: Refer to *../connectionBasicType.json#/definitions/connectionArguments*.
- **`supportsMetadataExtraction`**: Refer to *../connectionBasicType.json#/definitions/supportsMetadataExtraction*.
- **`supportsDBTExtraction`**: Refer to *../connectionBasicType.json#/definitions/supportsDBTExtraction*.
- **`supportsProfiler`**: Refer to *../connectionBasicType.json#/definitions/supportsProfiler*.
- **`supportsDatabase`**: Refer to *../connectionBasicType.json#/definitions/supportsDatabase*.
- **`supportsUsageExtraction`**: Refer to *../connectionBasicType.json#/definitions/supportsUsageExtraction*.
## Definitions

- **`mssqlType`** *(string)*: Service type. Must be one of: `['Mssql']`. Default: `Mssql`.
- **`mssqlScheme`** *(string)*: SQLAlchemy driver scheme options. Must be one of: `['mssql+pyodbc', 'mssql+pytds', 'mssql+pymssql']`. Default: `mssql+pytds`.


Documentation file automatically generated at 2023-04-13 23:17:03.893190.
